Dynamic loading of routes working based on page type stored in DB. TextPage based on an extension so it is easy to include it.

--- a/src/Jazzee/TextPageBundle/Resources/views/ApplicationPage/index.html.twig
+++ b/src/Jazzee/TextPageBundle/Resources/views/ApplicationPage/index.html.twig
@@ -1,1 +1,5 @@
-Hi! I'm a text page.
+{% extends 'JazzeeCommonBundle::page_layout.html.twig' %}
+{% block content %}
+    {{ applicationPage.leadingText | raw }}
+    {{ applicationPage.trailingText | raw }}
+{% endblock %}
